# cryptoballot

./: .gitignore  .scrutinizer.yml  .travis.yml  Cargo.toml  LICENSE.md  Makefile  PAPERS.txt  README.md  WHITEPAPER.md  ballot.go  ballot_test.go  codecov.yml  config.go  crypto.go  crypto_test.go  docker-compose.yml  importpath  notes.txt  readme.md  run  test.conf  test.txt  voteflow.go
.github/: FUNDING.yml
.github/workflows/: check.yml  rust.yml
ballotbox/: admin-keys.pem  admin-private.2.key  ballotbox.go  bootstrap.go  config.go  election-handler.go  example.conf  readme.md  schema.sql  test.conf  vote-handler.go
ballotclerk/: SignatureRequest.go  ballotclerk.go  config.go  readme.md  schema.sql  test.conf
ballotclerk/example-conf/: example.conf
ballottooth/: Cargo.toml
clients/ballotbox/: ballotbox.go
clients/ballotclerk/: ballotclerk.go
cryptoballod/: Cargo.toml  sqlx-data.json
cryptoballod/migrations/: 20210331024424_create-tx-table.sql
cryptoballod/src/: config.rs  db.rs  main.rs  tasks.rs
cryptoballot/: Ballot.go  Ballot_test.go  BlindBallot.go  BlindBallot_test.go  Cargo.toml  Election.go  Election_test.go  FulfilledSignatureRequest.go  PrivateKey.go  PrivateKey_test.go  PublicKey.go  PublicKey_test.go  Signature.go  SignatureRequest.go  SignatureRequest_test.go  Signature_test.go  TagSet.go  TagSet_test.go  User.go  User_test.go  Vote.go  coverage.out  crypto.go  crypto_test.go
cryptoballot/src/: authn.rs  ballot.rs  decryption.rs  ecies_ed25519.rs  election.rs  error.rs  keygen.rs  lib.rs  misc.rs  mix.rs  secret_share.rs  serde_hex.rs  store.rs  tally.rs  tests.rs  transaction.rs  trustee.rs  util.rs  vote.rs  voting_end.rs
cryptoballot/src/transactions/: mod.rs
cryptoballot_cli/: Cargo.toml
cryptoballot_cli/src/: command_authn.rs  command_e2e.rs  command_election.rs  command_keygen.rs  command_post_transaction.rs  command_trustee.rs  command_vote.rs  command_voting_end.rs  main.rs  rest.rs  transaction.rs
cryptoballot_exonum/: Cargo.toml
cryptoballot_exonum/src/: lib.rs
cryptoballot_exonum/src/proto/: mod.rs  service.proto
cryptoballot_exonum_backup/: Cargo.toml
cryptoballot_exonum_backup/src/: lib.rs
cryptoballot_sawtooth/: Cargo.toml  docker-compose.yml
cryptoballot_sawtooth/src/: handler.rs
cryptoballot_sawtooth_tp/: Cargo.toml  docker-compose.yml  test.txt
cryptoballot_sawtooth_tp/src/: error.rs  handler.rs  main.rs
cryptoballot_server/: Cargo.toml
cryptoballot_server/src/: api.rs  main.rs  service.rs  tasks.rs
cryptoballot_tp/: Cargo.toml
cryptoballot_tp/src/: handler.rs  main.rs
demo/: README.txt  admin_key.pem  bestartist.1.ballot  bestartist.2.ballot  bestartist.3.ballot  bestartist.election  docker-compose.yml  voter1.pem  voter2.pem  voter3.pem
demo/servers/: admins_public.pem  ballot_clerk_key.pem  ballotbox.conf  electionclerk.conf
electionclerk/: bootstrap.go  election-handler.go  electionclerk.go  example.conf  schema.sql  signature-handler.go
servers/ballotbox/: bootstrap.go  vote-handler.go
servers/electionclerk/: bootstrap.go  electionclerk.go  example.conf  signature-handler.go
test/: run_tests.bash
test/test_election_1/: transaction_1.election.json  transaction_2.vote.json  transaction_3.secret_share.json  transaction_4.secret_share.json  transaction_5.decryption.json
test_elections/: run_tests.bash  test_election.sqlite.db
test_elections/test_election_1/: test_election_1.json  transaction_1.election.json  transaction_2.vote.json  transaction_3.secret_share.json  transaction_4.secret_share.json  transaction_5.decryption.json
test_elections/test_election_1/seperated/: 1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
test_elections/test_election_2/: test_election_2.json
testdata/: admins-private.pem  admins-public.der  admins-public.der.base64  admins-public.der.base64.sha512  admins-public.pem  ballot-clerk-private.pem  ballot-clerk-public.pem  ballot.signed  ballot.unsigned  signature-request.signed  signature-request.unsigned  test-election.election
testing/data/: admin-private.1.key  admins-public.pem  ballot.signed  election12345.election  signature-request.signed  signature-request.unsigned  voter-private.pem  voter-public.der  voter-public.der.base64  voter-public.der.base64.sha512  voter-public.pem
testing/webtest/: ballotbox.conf  cleanup.sh  electionclerk.conf  endtoend.go  readme.me  testElection.go  webtest.go  webtest_test.go
utils/cryptoballot/: admin_create.go  admin_tally.go  cryptoballot.go  voter_vote.go
utils/cryptoballot-getid/: cryptoballot-getid.go
utils/cryptoballot-public-key/: cryptoballot-public-key.go
utils/cryptoballot-sign/: cryptoballot-sign.go
utils/cryptoballot-signature-request/: cryptoballot-signature-request.go
