[package]
name = "cryptoballod"
version = "0.0.0"
workspace = "../"
edition = "2018"
publish = false

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cryptoballot = { path = "../cryptoballot" }
lazy_static = "1.4.0"
ed25519-dalek = { version = "1.0.1", features = ["serde"] }
hex = "0.4.3"
rand = { version = '0.7.3' }

[dependencies.sqlx]
version = "0.5.1"
default-features = false
features = ["runtime-tokio-rustls", "sqlite", "macros", "offline", "migrate"]

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
branch = "master"
default-features = false
features = ["sqlite_pool", "json"]
