[package]
name = 'cryptoballot'
version = '0.4.0'
authors = ['phayes <patrick.d.hayes@gmail.com>']
edition = '2018'
description = 'Cryptographically secure end-to-end verifiable online voting'
readme = 'README.md'
license = "Apache-2.0"
repository = "https://github.com/cryptoballot/cryptoballot"
homepage = "https://cryptoballot.com"

[dependencies]
rand = '0.7.3'
rand_core = "0.5.1"
rand_chacha = '0.2.0'
curve25519-dalek = "^3.0.0"
ed25519-dalek = { version = "1.0.1", features = ["serde"] }
x25519-dalek = { version = "1.1.1", features = ["serde"] }
serde_cbor = '0.11.1'
indexmap = { version = "1.6.2", features = ["serde-1"] }
hex = '0.4.3'
num_enum = "0.5.1"
thiserror = "1.0.25"
sha2 = "0.9.3"
digest = "0.9.0"
rsa-fdh = "0.5.0"
hkdf = "0.11.0"
aes-gcm = "0.9.2"
# TODO: Replace these with something better (that use is_human_readable())
hex-serde = "0.1.0"
hex-buffer-serde = "0.3.0"
cryptid = { git = "https://github.com/eleanor-em/cryptid", branch = "0.9-preview" }
prost = "0.7.0"

[dependencies.rsa]
version = "0.3.0" # Wait until upgrade to rand 0.8
features = ["serde"]

[dependencies.uuid]
version = '0.7.4' # Wait until upgrade to rand 0.8
features = ['serde', 'v4']

[dependencies.serde]
version = '1.0.125'
features = ['derive']

[dependencies.serde_json]
version = '1.0.64'
features = ['preserve_order']
