[package]
name = "cryptoballot_cli"
version = "0.1.0"
authors = ["phayes <patrick.d.hayes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
num_enum = "0.4.2"
content_inspector = "0.2.4"
cryptoballot = { path = "../cryptoballot" } 
serde_json = "1.0.48"
serde_cbor = "0.11.1"
sawtooth-sdk = { version = "0.4.2", features=[] }
reqwest = { version = "0.10.1", features=["blocking", "json"] }
protobuf = "2.10.1"
rand = "0.7.3"
sha2 = "0.8.1"
lazy_static = "1.4.0"
hex = '0.4.2' 
base64 = "0.11.0"
shellexpand = "2.0.0"
serde = "1.0.104"
tallystick = "0.2.0"
