[package]
name = "cryptoballot_cli"
version = "0.1.0"
authors = ["phayes <patrick.d.hayes@gmail.com>"]
edition = "2018"

[[bin]]
name = "cryptoballot"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = "2.33.3"
num_enum = "0.5.0"
content_inspector = "0.2.4"
cryptoballot = { path = "../cryptoballot" }
cryptoballot_exonum = { path = "../cryptoballot_exonum" }
ed25519-dalek = { version = "1.0.1", features = ["serde"] }
exonum-crypto = { version = "1.0", git = "https://github.com/exonum/exonum" }
serde_json = "1.0.53"
reqwest = { version = "0.10.4", features = ["blocking", "json"] }
protobuf = "2.14.0"
rand = "0.7.3"
sha2 = "0.8.1"
lazy_static = "1.4.0"
hex = '0.4.2'
base64 = "0.11.0"
shellexpand = "2.0.0"
serde = "1.0.110"
tallystick = "0.3.1"
uuid = "0.7"
