[package]
name = "cryptoballot_exonum"
publish = false
version = "0.1.0"
edition = "2018"
authors = ["Patrick Hayes <patrick.d.hayes@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
keywords = ["exonum", "blockchain", "cryptoballot"]
description = ""

[dependencies]
exonum = { version = "1.0.0", git = "https://github.com/exonum/exonum" }
exonum-crypto = { version = "1.0.0", git = "https://github.com/exonum/exonum" }
exonum-derive = { version = "1.0.0", git = "https://github.com/exonum/exonum" }
exonum-merkledb = { version = "1.0.0", git = "https://github.com/exonum/exonum" }
exonum-proto = { version = "1.0.0", git = "https://github.com/exonum/exonum" }
exonum-rust-runtime = { version = "1.0.0", git = "https://github.com/exonum/exonum" }
exonum-explorer = { version = "1.0.0", git = "https://github.com/exonum/exonum" }
cryptoballot = { path = "../cryptoballot" }
anyhow = "1.0"
protobuf = "2.17.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
hex = "0.4.3"

[dev-dependencies]
exonum-cli = { version = "1.0.0", git = "https://github.com/exonum/exonum" }
exonum-explorer-service = { version = "1.0.0", git = "https://github.com/exonum/exonum" }
exonum-testkit = { version = "1.0.0", git = "https://github.com/exonum/exonum" }
assert_matches = "1.2.0"
pretty_assertions = "0.7.1"
rand = "0.8"

[dev-dependencies.tokio]
version = "0.2.13"
features = [
    "blocking",
    "dns",
    "io-util",
    "macros",
    "rt-threaded",
    "tcp",
    "time"
]

[build-dependencies]
exonum-build = { version = "1.0.1", git = "https://github.com/exonum/exonum" }
