[package]
name = 'cryptoballot_tp'
version = '0.1.0'
authors = ['phayes <patrick.d.hayes@gmail.com>']
edition = '2018'

[dependencies]
sha2 = '0.8.1'
digest = '0.8.1'
serde_json = '1.0.48'
hex = '0.4.1'

[dependencies.cryptoballot]
path = '../cryptoballot'

[dependencies.sawtooth-sdk]
git = 'https://github.com/hyperledger/sawtooth-sdk-rust.git'
